--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -4,12 +4,14 @@ spring:
 
   jpa:
     generate-ddl: true
-    database: postgresql
     show-sql: true
+    hibernate:
+      ddl-auto: create
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
 
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/lms?characterEncoding=UTF-8
+    url: jdbc:postgresql://172.16.6.79:5432/lms?characterEncoding=UTF-8
     username: postgres
     password: popost
 
