전체 Entity 초기 구성

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -4,9 +4,10 @@ spring:
 
   jpa:
     generate-ddl: true
+    database: postgresql
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
   datasource:
