--- a/backend/src/main/resources/application-stage.yml
+++ b/backend/src/main/resources/application-stage.yml
@@ -1,12 +1,17 @@
+server:
+  port: 8080
+  servlet:
+    context-path: /api
+
 spring:
-  application:
-    name: backend
+  profiles:
+    default: stage
 
   jpa:
     generate-ddl: true
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
   datasource:
@@ -20,8 +25,3 @@ spring:
       charset: UTF-8
       enabled: true
       force: true
-
-server:
-  port: 8081
-  servlet:
-    context-path: /api
