Revert "dev, stage, production 환경에 맞는 Server Port & DB 엔드포인트 설정"
This reverts commit 12cc2964c90a4dae3d99dc7fa67eed8beee81c33.

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,17 +1,12 @@
-server:
-  port: 8080
-  servlet:
-    context-path: /api
-
 spring:
-  profiles:
-    default: stage
+  application:
+    name: backend
 
   jpa:
     generate-ddl: true
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
   datasource:
@@ -25,3 +20,8 @@ spring:
       charset: UTF-8
       enabled: true
       force: true
+
+server:
+  port: 8081
+  servlet:
+    context-path: /api
