--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,6 +2,10 @@ spring:
   application:
     name: backend
 
+  security:
+    basic:
+      enabled: false
+
   jpa:
     generate-ddl: true
     database: postgresql
@@ -26,3 +30,4 @@ server:
   port: 8081
   servlet:
     context-path: /api
+
