course, department의 등록 및 조회 기능

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,6 +2,10 @@ spring:
   application:
     name: backend
 
+  security:
+    basic:
+      enabled: false
+
   jpa:
     generate-ddl: true
     show-sql: true
@@ -25,3 +29,4 @@ server:
   port: 8081
   servlet:
     context-path: /api
+
