--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -6,12 +6,12 @@ spring:
     generate-ddl: true
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://172.16.6.79:5432/lms?characterEncoding=UTF-8
+    url: jdbc:postgresql://localhost:5432/lms?characterEncoding=UTF-8
     username: postgres
     password: popost
 
