feat: 과제파일 업로드 구현
S3Config, S3Service

resolves: #20

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation platform('software.amazon.awssdk:bom:2.27.21')
+    implementation 'software.amazon.awssdk:s3'
 }
 
 tasks.named('test') {
