--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -1,17 +1,14 @@
-server:
-  port: 8081
-  servlet:
-    context-path: /api
-
 spring:
-  profiles:
-    default: dev
+  config:
+    import: optional:file:.env[.properties]
+  application:
+    name: backend
 
   jpa:
     generate-ddl: true
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
   datasource:
@@ -25,3 +22,8 @@ spring:
       charset: UTF-8
       enabled: true
       force: true
+
+server:
+  port: 8081
+  servlet:
+    context-path: /api
