feat: 성적 조회 수정 기능 완성.

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
   application:
     name: backend
+    
+  output:
+    ansi:
+      enabled: always
 
   security:
     basic:
@@ -41,3 +45,5 @@ my_value:
 #  org:
 #    springframework:
 #      security: DEBUG
+
+
