--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -12,12 +12,12 @@ spring:
 
   jpa:
     generate-ddl: true
-    show-sql: true
+    show-sql: false
     hibernate:
       ddl-auto: update
     properties:
       hibernate:
-        format_sql: true
+        format_sql: false
         default_schema: public  # 스키마 설정 추가
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
