--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,4 +1,13 @@
 spring:
+  springdoc:
+    swagger-ui:
+      path: /swagger-ui.html
+      tags-sorter: alpha
+      operations-sorter: alpha
+    api-docs:
+      path: /api-docs
+    default-consumes-media-type: application/json
+
   application:
     name: backend
 
@@ -14,7 +23,10 @@ spring:
     properties:
       hibernate:
         format_sql: true
-        default_schema: public  # 스키마 설정 추가
+        default_schema: public
+        jdbc:
+          lob:
+            non_contextual_creation: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
   datasource:
@@ -33,4 +45,3 @@ server:
   port: 8081
   servlet:
     context-path: /api
-
