--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 spring:
+  # Swagger UI 설정 추가
   springdoc:
     swagger-ui:
       path: /swagger-ui.html
@@ -7,6 +8,7 @@ spring:
     api-docs:
       path: /api-docs
     default-consumes-media-type: application/json
+    default-produces-media-type: application/json
 
   application:
     name: backend
@@ -43,5 +45,3 @@ spring:
 
 server:
   port: 8081
-  servlet:
-    context-path: /api
