--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,17 +1,5 @@
 spring:
 
-  # Swagger UI 설정 추가
-  springdoc:
-    api-docs:
-      enabled: true
-      path: /api-docs
-    swagger-ui:
-      path: /swagger-ui.html
-      enabled: true
-      operations-sorter: alpha
-      tags-sorter: alpha
-
-
   application:
     name: backend
     
@@ -27,7 +15,7 @@ spring:
     generate-ddl: true
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
@@ -45,6 +33,17 @@ spring:
       charset: UTF-8
       enabled: true
       force: true
+
+# Swagger UI 설정 추가
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    tags-sorter: alpha
+    operations-sorter: alpha
+  api-docs:
+    path: /api-docs
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
 
 server:
   port: 8081
