--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation group: 'com.auth0', name: 'java-jwt', version: '4.4.0'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 
 
 }
