--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -53,6 +53,12 @@ server:
 my_value:
   key: "1111"
 
+# Redis 설정 추가
+  redis:
+    host: localhost
+    port: 6379
+
+
 #LOGGING_LEVEL:
 #  org:
 #    springframework:
