--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -27,6 +27,12 @@ spring:
     username: postgres
     password: popost
 
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+      password: redis
+
   springdoc:
     swagger-ui:
       path: /swagger-ui.html
@@ -42,16 +48,6 @@ spring:
       charset: UTF-8
       enabled: true
       force: true
-
-  springdoc:
-    swagger-ui:
-      path: /swagger-ui.html
-      tags-sorter: alpha
-      operations-sorter: alpha
-    api-docs:
-      path: /api-docs
-    default-consumes-media-type: application/json
-    default-produces-media-type: application/json
 
 server:
   port: 8081
