--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -63,6 +63,19 @@ dependencies {
     testImplementation 'org.springframework:spring-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.springframework.boot:spring-boot-starter-test'
+
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.kafka:spring-kafka'
+
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.webjars:sockjs-client:1.5.1'
+
+    implementation 'org.webjars:stomp-websocket:2.3.4'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+    implementation 'com.google.guava:guava:31.1-jre'
+    testImplementation 'io.projectreactor:reactor-test'
 }
 
 tasks.named('test') {
