--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     // Spring Security
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
     testImplementation 'org.springframework.security:spring-security-test'
+    implementation 'org.springframework.security:spring-security-ldap:6.3.4'
 
     // Database
     runtimeOnly 'org.postgresql:postgresql'
